--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         <div  id="aboutme">
             <h2>About Me</h2>
             <img src="images/IMG-20180712-WA0048.jpg" alt="a picture of me" id="picme">
-            <p>I'm Alabi Bolaji, a web developer based in Lagos, Nigeria. Currently I'm more focused on the front-end of web development but I do have plans of becoming a full stack web-developer soon. Other than web development, I'm also passionate about creating open source content. I've been an active contributor to a few of the Wikimedia projects (Wikipedia, Wikimedia Commons, Wikidata, etc) for over a year now.</p>
+            <p>I'm Alabi Bolaji, a software developer based in Lagos, Nigeria. Currently I'm more focused on the front-end of web development but I do have plans of becoming a full stack web-developer soon. Other than web development, I also develop android apps and I'm also passionate about creating open source content. I've been an active contributor to a few of the Wikimedia projects (Wikipedia, Wikimedia Commons, Wikidata, etc) for over two years now.</p>
         </div>
     </div>
     <div id="portfolio">
         <h2>My Portfolio</h2>
         <!-- this section is mostly empty for now because I don't have much of a portfolio as a web developer yet-->
-        <p>Programming Languages -- <span class="info">Python</span></p>
+        <p>Programming Languages -- <span class="info">Python, Java</span></p>
         <p>Scripting Languages -- <span class="info">JavaScript</span></p>
-        <p>Markup Languages -- <span class="info">HTML5/CSS</span></p>
+        <p>Markup Languages -- <span class="info">HTML5/CSS, XML</span></p>
         Although this website is my currently my only live project, you can check my github profile for some practice work I've done. (disclaimer: none of them are my original designs)
     </div>
     <div id="contact">
