--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>Programming Languages -- <span class="info">Python, Java</span></p>
         <p>Scripting Languages -- <span class="info">JavaScript</span></p>
         <p>Markup Languages -- <span class="info">HTML5/CSS, XML</span></p>
-        Although this website is my currently my only live project, you can check my github profile for some practice work I've done. (disclaimer: none of them are my original designs)
+        Although this website is my currently my only live project, you can check my github profile for some practice work I've done. (disclaimer: not all of them are my original designs)
     </div>
     <div id="contact">
         <h2>Contact Me</h2>
